code/python/FactSetTickHistory/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# FactSet Tick History client library for Python

[![PyPi](https://img.shields.io/pypi/v/fds.sdk.FactSetTickHistory)](https://pypi.org/project/fds.sdk.FactSetTickHistory/)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Tick History **Level 2** provides dynamic access to the historical tick data up to 10 levels of depth for a specific security for specific dates or date range. The API generates output files with data based on client-specified input parameters. The input parameters include universe specification and date ranges for which the data will be generated. When the API request with specified input parameters has been completed, the output files will be made available back to the users through a secure URL to the location where the files are stored. Therefore, this API has two APIs (i) Request files API (ii) Get Files API.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.0.0
- Package version: 0.0.1
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.FactSetTickHistory
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.FactSetTickHistory
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.7+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.9.7
      pyenv shell 3.9.7
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.FactSetTickHistory
from fds.sdk.FactSetTickHistory.api import get_files_level_2__beta_api
from fds.sdk.FactSetTickHistory.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.FactSetTickHistory.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.FactSetTickHistory.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.FactSetTickHistory.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = get_files_level_2__beta_api.GetFilesLevel2BETAApi(api_client)
    # NOTE: The parameter variable defined below is just an example and may potentially contain non valid values. So please replace this with valid values.
    request_id = "requestId_example" # str | RequestId returned by request-files endpoint to poll and collect results of the query
    # NOTE: The parameter variable defined below is just an example and may potentially contain non valid values. So please replace this with valid values.
    pagination_limit = 20 # int | Specifies the maximum number of results to return per response page (optional) if omitted the server will use the default value of 20
    # NOTE: The parameter variable defined below is just an example and may potentially contain non valid values. So please replace this with valid values.
    pagination_offset = 0 # int | Specifies the starting point for pagination. This parameter is used to identify the beginning of next set of results (optional) if omitted the server will use the default value of 0

    try:
        # Returns the files for the requested requestId
        # example passing only required values which don't have defaults set
        # and optional values
        api_response = api_instance.get_tick_history_files_level2(request_id, pagination_limit=pagination_limit, pagination_offset=pagination_offset)

        pprint(api_response)
    except fds.sdk.FactSetTickHistory.ApiException as e:
        print("Exception when calling GetFilesLevel2BETAApi->get_tick_history_files_level2: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # Returns the files for the requested requestId
    #     api_response, http_status_code, response_headers = api_instance.get_tick_history_files_level2_with_http_info(request_id, pagination_limit=pagination_limit, pagination_offset=pagination_offset)


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.FactSetTickHistory.ApiException as e:
    #     print("Exception when calling GetFilesLevel2BETAApi->get_tick_history_files_level2: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # Returns the files for the requested requestId
    #     async_result = api_instance.get_tick_history_files_level2_async(request_id, pagination_limit=pagination_limit, pagination_offset=pagination_offset)
    #     api_response = async_result.get()


    #     pprint(api_response)
    # except fds.sdk.FactSetTickHistory.ApiException as e:
    #     print("Exception when calling GetFilesLevel2BETAApi->get_tick_history_files_level2: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # Returns the files for the requested requestId
    #     async_result = api_instance.get_tick_history_files_level2_with_http_info_async(request_id, pagination_limit=pagination_limit, pagination_offset=pagination_offset)
    #     api_response, http_status_code, response_headers = async_result.get()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.FactSetTickHistory.ApiException as e:
    #     print("Exception when calling GetFilesLevel2BETAApi->get_tick_history_files_level2: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.FactSetTickHistory

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.FactSetTickHistory.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.FactSetTickHistory

configuration = fds.sdk.FactSetTickHistory.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.FactSetTickHistory

configuration = fds.sdk.FactSetTickHistory.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/bulk-documents/tick-history/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*GetFilesLevel2BETAApi* | [**get_tick_history_files_level2**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetTickHistory/v0/docs/GetFilesLevel2BETAApi.md#get_tick_history_files_level2) | **GET** /level2/get-files | Returns the files for the requested requestId
*RequestFilesLevel2BETAApi* | [**getrequest_id_level2**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetTickHistory/v0/docs/RequestFilesLevel2BETAApi.md#getrequest_id_level2) | **GET** /level2/request-files | Returns the requestId and status


## Documentation For Models

 - [ErrorExample](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetTickHistory/v0/docs/ErrorExample.md)
 - [Files](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetTickHistory/v0/docs/Files.md)
 - [GetFilesResponseLevel2](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetTickHistory/v0/docs/GetFilesResponseLevel2.md)
 - [IsPartial](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetTickHistory/v0/docs/IsPartial.md)
 - [Level2RequestFilesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetTickHistory/v0/docs/Level2RequestFilesResponse.md)
 - [Meta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetTickHistory/v0/docs/Meta.md)
 - [Pagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetTickHistory/v0/docs/Pagination.md)
 - [Status](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FactSetTickHistory/v0/docs/Status.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.FactSetTickHistory.apis and fds.sdk.FactSetTickHistory.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.FactSetTickHistory.api.default_api import DefaultApi`
- `from fds.sdk.FactSetTickHistory.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.FactSetTickHistory
from fds.sdk.FactSetTickHistory.apis import *
from fds.sdk.FactSetTickHistory.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

